# api/swagger.yaml
@@ -104,10 +104,34 @@ paths:
           description: "Invalid ID"
         404:
           description: "Recipe not found"
+  /recipe/{id}/upload:
+    post:
+      tags:
+      - "recipe"
+      summary: "Upload image"
+      consumes:
+         - multipart/form-data
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "ID of recipe"
+          required: true
+          type: string
+        - in: formData
+          name: image
+          type: file
+          description: The file to upload.
+      responses:
+        400:
+          description: "Invalid ID"
+        404:
+          description: "Recipe not found"
+        415:
+          description: "Illegal content type"
   /recepies:
     get:
       tags:
-      - "recipe"
+      - "recepies"
       summary: "List recipes"
       produces:
       - "application/json"
